tests/ui/traits/const-traits/non-const-op-const-closure-non-const-outer.stderr
error[E0277]: the trait bound `{closure@$DIR/non-const-op-const-closure-non-const-outer.rs:13:6: 13:14}: [const] Fn()` is not satisfied
  --> $DIR/non-const-op-const-closure-non-const-outer.rs:13:5
   |
LL |     (const || { (()).foo() })();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `{closure@$DIR/non-const-op-const-closure-non-const-outer.rs:13:6: 13:14}: [const] FnMut()` is not satisfied
  --> $DIR/non-const-op-const-closure-non-const-outer.rs:13:5
   |
LL |     (const || { (()).foo() })();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: required by a bound in `call`
  --> $SRC_DIR/core/src/ops/function.rs:LL:COL

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
