tests/ui/traits/const-traits/non-const-op-const-closure-non-const-outer.rs
#![feature(const_closures, const_trait_impl)]
#![allow(incomplete_features)]

trait Foo {
    fn foo(&self);
}

impl Foo for () {
    fn foo(&self) {}
}

fn main() {
    (const || { (()).foo() })();
    //~^ ERROR: }: [const] Fn()` is not satisfied
}
